# dotfiles

./: .gitignore  .gitmodules  MACOS.md  README.md  ackrc  addbundle  alacritty.linux.yml  alacritty.toml  alacritty.yml  bash_profile  chunkwmrc  clangd  ctags  eslintrc.js  eslintrc.json  gitconfig  gitconfig.ft  gitconfig.work  gitignore_global  huskyrc  install.conf.yaml  jshintrc  mbsyncrc  mime.types  msmtprc  patat.yaml  ripgreprc  rmbundle  skhdrc  tmux.conf  vimrc  yabairc  zprofile  zshenv  zshrc  zshrc.pre-oh-my-zsh
nvim/: .gitignore  .lvimrc  .vintrc.yaml  README.md  init.vim  justfile  pyproject.toml
nvim/autoload/: go.vim  javascript.vim  scss.vim  typescript.vim  vim.vim
nvim/config/: 42header.vim  ale.vim  auto_pairs.vim  barbar.vim  buffet.vim  bufkill.vim  clap.vim  colorizer.vim  commentary.vim  ctrlp.vim  ctrlsf.vim  dirvish.vim  git_messenger.vim  go.vim  gutentags.vim  jsx_improve.vim  jsx_typescript.vim  lightline.vim  localvimrc.vim  markdown.vim  onedark.vim  plug.vim  projectionist.vim  signature.vim  signify.vim  splitjoin.vim  supertab.vim  switch.vim  toml.vim  ultisnips.vim
nvim/ftdetect/: conf.vim  dosini.vim  gitconfig.vim  icalendar.vim  javascript.jsx.vim  javascript.mdx.vim  javascript.vim  lua.vim  make.vim  neomuttrc.vim  ruby.vim  tags.vim  toml.vim  typescript.tsx.vim  xml.plist.vim  zsh.vim
nvim/ftplugin/: go.vim  javascript.vim  json.vim  mail.vim  scss.vim  vim.vim
nvim/indent/: javascript.vim  markdown.vim  mdx.vim  plist.vim  snippets.vim  xml.vim
nvim/plugin/: cc.vim  mac.vim  mark.vim  os.vim  provider.vim  yank.vim  (+2 more)
(+301 files in other folders)
