[tool.poetry]
name = "nvim"
version = "1.0.0"
description = "Neovim configuration files"
authors = ["Marcus Mu <chunkhang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
vim-vint = "^0.3.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
